...
            Button(action: { viewModel.buttonAction() }) {
                Text(viewModel.addButtonTitle)
                    .frame(width: 300, height: 30)
                    .font(.system(size: 16, weight: .bold, design: .rounded))
            }
            .buttonStyle(BaseButtonStyle())
            .accessibility(identifier: "button")
            .padding(10)
            .padding([.leading, .trailing], 27.5)
            .alert(isPresented: $viewModel.shouldShowAlert ) {
                guard let alert = viewModel.alertProvder.alert else {
                    fatalError("Alert not available")
                }
...
